PTVS-41: added scheduled job for updating service status, validations